--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1218803770039218"
      crossorigin="anonymous"></script>
+	
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1218803770039218"
+     crossorigin="anonymous"></script>
+	
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-format="autorelaxed"
